[tool.poetry]
name = "quart-example-app"
version = "0.1.0"
description = ""
authors = ["Andrew Steinborn <git@steinborn.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[tool.pytest.ini_options]
pythonpath = ["./src"]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
